[package]
name = "neum"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CSS formating template"
readme = "../README.md"
respository = "https://github.com/Neum-CSS/Neum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neum-parse = {path = "../neum_parse", version = "0.1.0"}
lazy_static = "1.4.0"
logos = "0.12.1"
regex = "1.7.3"

[build-dependencies]
neum-parse = {path = "../neum_parse", version = "0.1.0"}
walkdir = "2.3.3"
Inflector = "0.11.4"
