[package]
name = "neum-cli"
version = "0.1.0"
edition = "2021"
licence = "MIT"
description = "A CSS formating cli program"
readme = "../README.md"
respository = "https://github.com/AMTitan/Neum"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.1"
neum = {path = "../neum"}
lazy_static = "1.4.0"
logos = "0.12.1"
notify = "5.1.0"
regex = "1.7.3"
walkdir = "2.3.3"
