[package]
name = "neum-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CSS formating cli program"
readme = "../README.md"
respository = "https://github.com/Neum-CSS/Neum"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "neum"
path = "src/main.rs"

[dependencies]
clap = {version = "4.2.1", features = ["derive"]}
neum = {path = "../neum", version = "0.1.0"}
lazy_static = "1.4.0"
notify = "5.1.0"
walkdir = "2.3.3"
notify-debouncer-mini = "0.2.1"
html_parser = "0.6.3"
anyhow = "1.0.70"
itertools = "0.10.5"
