[package]
name = "neum-parse"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A parser for the CSS neum file type"
readme = "../README.md"
respository = "https://github.com/AMTitan/Neum"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
regex = "1.7.3"
